--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>index</title>
+    <title>기본페이지</title>
 </head>
 <body>
     <h2>Hello My SpringBoot Project</h2>
     <a href="/member/save">회원가입</a>
     <a href="/member/login">로그인</a>
-    <a href="/member/">회원목록</a>
+    <a href="/member/list">회원목록</a>
 </body>
 </html>
